--- a/package.json
+++ b/package.json
@@ -2,56 +2,71 @@
   "name": "feathers-openai",
   "version": "0.0.0-semantic-release",
   "description": "An open.ai adapter for FeathersJS",
-  "main": "lib",
-  "types": "types",
+  "main": "lib/",
+  "types": "lib/",
   "directories": {
     "lib": "lib",
     "test": "test"
   },
-  "dependencies": {
-    "@feathersjs/adapter-commons": "^4.5.12",
-    "@feathersjs/commons": "^4.5.12",
-    "@feathersjs/errors": "^4.5.12",
-    "harperive": "^2.0.1",
-    "is-plain-object": "^5.0.0",
-    "knex": "^1.0.3",
+  "peerDependencies": {
+    "@feathersjs/errors": "^5.0.0 || ^4.5.12",
     "openai": "^3.1.0"
   },
   "devDependencies": {
-    "@feathersjs/adapter-tests": "^4.5.12",
-    "@feathersjs/feathers": "^4.5.12",
+    "@babel/cli": "^7.21.0",
+    "@babel/core": "^7.21.0",
+    "@babel/plugin-transform-modules-commonjs": "^7.21.2",
+    "@babel/preset-env": "^7.20.2",
+    "@babel/register": "^7.21.0",
+    "@feathersjs/errors": "^5.0.0",
+    "@feathersjs/koa": "^5.0.0",
     "@semantic-release/commit-analyzer": "^9.0.2",
     "@semantic-release/git": "^10.0.1",
     "@semantic-release/npm": "^9.0.1",
-    "eslint": "^8.10.0",
-    "mocha": "^9.2.1",
-    "nock": "^13.2.4",
+    "app-root-path": "^3.1.0",
+    "cors": "^2.8.5",
+    "eslint": "^8.34.0",
+    "f4": "npm:@feathersjs/feathers@^4.0.0",
+    "f4_exp": "npm:@feathersjs/express@^4.0.0",
+    "f5": "npm:@feathersjs/feathers@^5.0.0",
+    "f5_exp": "npm:@feathersjs/express@^5.0.0",
+    "koa-multer": "^1.0.2",
+    "mocha": "^10.2.0",
+    "nock": "^13.3.0",
     "nyc": "^15.1.0",
-    "semistandard": "^16.0.1"
+    "semantic-release": "^20.1.0",
+    "semistandard": "^16.0.1",
+    "supertest": "^6.3.3"
   },
   "engines": {
-    "node": ">= 12"
+    "node": ">= 16"
   },
   "scripts": {
     "lint": "semistandard --fix",
-    "mocha": "mocha --recursive test/**/*.test.js",
+    "mocha": "mocha --require @babel/register --recursive test/**/*.test.js",
     "testd": "docker-compose up -d && npm run test && docker-compose down",
     "test": "printf '\\33c\\e[3J' && npm run lint && npm run coverage",
-    "test:dev": "printf '\\33c\\e[3J' && npm run lint && npm run mocha -- --watch --watch-files ./test/**/*,./lib/**",
+    "build": "babel src -d lib",
+    "test:dev": "printf '\\33c\\e[3J' && npm run lint && npm run mocha -- --watch --esm --parallel --watch-files ./test/**/*,./lib/**",
     "coverage": "nyc npm run mocha"
   },
   "semistandard": {
     "env": [
       "mocha"
+    ],
+    "ignore": [
+      "examples/",
+      "node_modules",
+      "lib/"
     ]
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/jamesvillarrubia/feathers-openai.git"
+    "url": "git+https://github.com/jamesvillarrubia/feathers-rpc.git"
   },
   "keywords": [
     "feathers",
-    "openai",
+    "rpc",
     "nlp",
     "feathers-plugin"
   ],
@@ -59,11 +74,21 @@
     "name": "James Villarrubia",
     "email": "james.villarrubia@gmail.com"
   },
+  "contributors": [
+    {
+      "name": "James Villarrubia",
+      "email": "james.villarrubia@gmail.com"
+    },
+    {
+      "name": "Ben Zelinski",
+      "email": "bziggz@gmail.com"
+    }
+  ],
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/jamesvillarrubia/feathers-openai/issues"
+    "url": "https://github.com/jamesvillarrubia/feathers-rpc/issues"
   },
-  "homepage": "https://github.com/jamesvillarrubia/feathers-openai#readme",
+  "homepage": "https://github.com/jamesvillarrubia/feathers-rpc#readme",
   "release": {
     "branches": [
       {
