--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "feathers-openai",
   "version": "0.0.0-semantic-release",
   "description": "An open.ai adapter for FeathersJS",
-  "main": "lib/",
+  "main": "src/",
   "types": "lib/",
   "directories": {
     "lib": "lib",
@@ -138,5 +138,10 @@
         }
       ]
     ]
+  },
+  "dependencies": {
+    "@feathersjs/adapter-tests": "^5.0.0",
+    "@feathersjs/schema": "^5.0.0",
+    "@feathersjs/typebox": "^5.0.0"
   }
 }
