--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "mocha": "^10.2.0",
     "nock": "^13.3.0",
     "nyc": "^15.1.0",
+    "release-it": "^15.7.0",
     "semantic-release": "^20.1.0",
     "semistandard": "^16.0.1",
     "supertest": "^6.3.3"
@@ -48,7 +49,8 @@
     "test": "printf '\\33c\\e[3J' && npm run lint && npm run coverage",
     "build": "babel src -d lib",
     "test:dev": "printf '\\33c\\e[3J' && npm run lint && npm run mocha -- --watch --esm --parallel --watch-files ./test/**/*,./lib/**",
-    "coverage": "nyc npm run mocha"
+    "coverage": "nyc npm run mocha",
+    "release": "release-it"
   },
   "semistandard": {
     "env": [
