--- a/.release-it.json
+++ b/.release-it.json
@@ -2,6 +2,9 @@
   "github": {
     "release": true
   },
+  "npm": {
+    "ignoreVersion": true
+  },
   "plugins": {
     "@release-it/conventional-changelog": {
       "preset": {
