ci: nothing to add

--- a/.release-it.json
+++ b/.release-it.json
@@ -3,7 +3,8 @@
     "release": true
   },
   "npm": {
-    "ignoreVersion": true
+    "ignoreVersion": true,
+    "publish": false
   },
   "plugins": {
     "@release-it/conventional-changelog": {
