--- a/.github/workflows/npm-publish-new.yml
+++ b/.github/workflows/npm-publish-new.yml
@@ -9,7 +9,6 @@ on:
   push:
     banches:
       - main
-      - develop
       - alpha
       - beta
   pull_request:
@@ -18,42 +17,34 @@ on:
       - main
       - alpha
       - beta
-      - 'releases/**-alpha*' # allow alpha releases
-      - 'releases/**-beta*' # allow beta releases
-  
 
 jobs:
-  test:
+  release:
+    name: Release
+    if: (github.event.pull_request.merged || github.event_name == 'workflow_dispatch') &&  github.ref_name == 'main'
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        node: [12, 14]
     steps:
       - uses: actions/checkout@v2
-      - name: Build the stack
-        run: docker-compose up -d
       - uses: actions/setup-node@v2
         with:
-          node-version: ${{ matrix.node }}
-      - name: Install dependencies
-        run: npm ci
-      - name: Run linters
-        run: npm run lint
-      - name: Run tests
-        run: npm test
-
-  release:
+          node-version: 18
+      - run: npm ci
+      - run: npx release-it --dry-run --ci
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+  prerelease:
     needs: test
     name: Release
-    if: github.event.pull_request.merged || github.event_name == 'workflow_dispatch'
+    if: (github.event.pull_request.merged || github.event_name == 'workflow_dispatch') &&  github.ref_name != 'main'
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
         with:
-          node-version: 14
+          node-version: 18
       - run: npm ci
-      - run: npx semantic-release
+      - run: npx release-it --dry-run --ci --preRelease=${{github.ref_name}}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
