--- a/.github/workflows/npm-publish-new.yml
+++ b/.github/workflows/npm-publish-new.yml
@@ -34,8 +34,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
   prerelease:
-    needs: test
-    name: Release
+    name: PreRelease
     if: (github.event.pull_request.merged || github.event_name == 'workflow_dispatch') &&  github.ref_name != 'main'
     runs-on: ubuntu-latest
     steps:
