ci: modify to use the NPM_TOKEN

--- a/.github/workflows/npm-publish-new.yml
+++ b/.github/workflows/npm-publish-new.yml
@@ -29,6 +29,7 @@ jobs:
         with:
           node-version: 18
       - run: npm ci
+      - run: npm config set //registry.npmjs.org/:_authToken $NPM_TOKEN
       - run: npx release-it --dry-run --ci
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
