ci: removes npm checks

--- a/.github/workflows/npm-publish-new.yml
+++ b/.github/workflows/npm-publish-new.yml
@@ -44,6 +44,7 @@ jobs:
         with:
           node-version: 18
       - run: npm ci
+      - run: npm config set //registry.npmjs.org/:_authToken $NPM_TOKEN
       - run: npx release-it --dry-run --ci --preRelease=${{github.ref_name}}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
