--- a/.release-it.json
+++ b/.release-it.json
@@ -4,7 +4,8 @@
   },
   "npm": {
     "ignoreVersion": true,
-    "publish": false
+    "publish": false,
+    "skipChecks": true
   },
   "plugins": {
     "@release-it/conventional-changelog": {
