--- a/.github/workflows/npm-publish-new.yml
+++ b/.github/workflows/npm-publish-new.yml
@@ -30,7 +30,7 @@ jobs:
           node-version: 18
       - run: npm ci
       - run: npm config set //registry.npmjs.org/:_authToken $NPM_TOKEN
-      - run: npx release-it --dry-run --ci
+      - run: npx release-it --dry-run --ci --npm.skipChecks
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
@@ -45,7 +45,7 @@ jobs:
           node-version: 18
       - run: npm ci
       - run: npm config set //registry.npmjs.org/:_authToken $NPM_TOKEN
-      - run: npx release-it --dry-run --ci --preRelease=${{github.ref_name}}
+      - run: npx release-it --dry-run --ci --preRelease=${{github.ref_name}} --npm.skipChecks
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
