--- a/.release-it.json
+++ b/.release-it.json
@@ -25,6 +25,10 @@
           {
             "type": "chore",
             "release": "patch"
+          },
+          {
+            "type": "ci",
+            "release": "minor"
           }
         ]
       }
