--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -19,22 +19,34 @@ on:
       - beta
 
 jobs:
-  test:
+    test: 
+    name: 'Node.js v${{ matrix.node }}'
     runs-on: ubuntu-latest
+    if: github.event.pull_request.merged == true || ${{ github.ref == 'ref/head/main' }} || github.event_name == 'workflow_dispatch'
     strategy:
       matrix:
-        node: [16, 18]
+        node:
+          - 14
+          - 16
+          - 18
     steps:
-      - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
         with:
-          node-version: ${{ matrix.node }}
+          node-version: '${{ matrix.node }}'
+      - uses: actions/checkout@v2
+      - name: 'Cache node_modules'
+        uses: actions/cache@v2
+        with:
+          path: ~/.npm
+          key: ${{ runner.os }}-node-v${{ matrix.node }}-${{ hashFiles('**/package.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-v${{ matrix.node }}-
       - name: Install dependencies
         run: npm ci
       - name: Run linters
         run: npm run lint
       - name: Run tests
-        run: npm test
+        run: npm run coverage
   release:
     name: Release
     if: (github.event.pull_request.merged || github.event_name == 'workflow_dispatch') &&  github.ref_name == 'main'
@@ -61,6 +73,7 @@ jobs:
         with:
           node-version: 18
       - run: npm ci
+      - run: npm run build --if-present
       - run: npx release-it --dry-run --ci --preRelease=${{github.ref_name}} --npm.skipChecks
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
