--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "feathers-openai",
-  "version": "0.0.0-semantic-release",
+  "name": "test_releaseit_automation_flow_justincase",
+  "version": "0.0.0-release-it",
   "description": "An open.ai adapter for FeathersJS",
   "main": "src/",
   "types": "lib/",
@@ -20,6 +20,7 @@
     "@babel/register": "^7.21.0",
     "@feathersjs/errors": "^5.0.0",
     "@feathersjs/koa": "^5.0.0",
+    "@release-it/conventional-changelog": "^5.1.1",
     "@semantic-release/commit-analyzer": "^9.0.2",
     "@semantic-release/git": "^10.0.1",
     "@semantic-release/npm": "^9.0.1",
@@ -34,6 +35,7 @@
     "mocha": "^10.2.0",
     "nock": "^13.3.0",
     "nyc": "^15.1.0",
+    "release-it": "^15.7.0",
     "semantic-release": "^20.1.0",
     "semistandard": "^16.0.1",
     "supertest": "^6.3.3"
@@ -48,7 +50,8 @@
     "test": "printf '\\33c\\e[3J' && npm run lint && npm run coverage",
     "build": "babel src -d lib",
     "test:dev": "printf '\\33c\\e[3J' && npm run lint && npm run mocha -- --watch --esm --parallel --watch-files ./test/**/*,./lib/**",
-    "coverage": "nyc npm run mocha"
+    "coverage": "nyc npm run mocha",
+    "release": "release-it --dry-run --ci --config .release-it.js"
   },
   "semistandard": {
     "env": [
@@ -89,56 +92,6 @@
     "url": "https://github.com/jamesvillarrubia/feathers-rpc/issues"
   },
   "homepage": "https://github.com/jamesvillarrubia/feathers-rpc#readme",
-  "release": {
-    "branches": [
-      {
-        "name": "main"
-      },
-      {
-        "name": "alpha",
-        "channel": "alpha",
-        "prerelease": true
-      },
-      {
-        "name": "beta",
-        "channel": "beta",
-        "prerelease": true
-      }
-    ],
-    "plugins": [
-      "@semantic-release/git",
-      [
-        "@semantic-release/npm",
-        {
-          "npmPublish": true
-        }
-      ],
-      [
-        "@semantic-release/commit-analyzer",
-        {
-          "preset": "angular",
-          "releaseRules": [
-            {
-              "type": "refactor",
-              "release": "patch"
-            },
-            {
-              "type": "style",
-              "release": "patch"
-            },
-            {
-              "type": "perf",
-              "release": "patch"
-            },
-            {
-              "type": "chore",
-              "release": "patch"
-            }
-          ]
-        }
-      ]
-    ]
-  },
   "dependencies": {
     "@feathersjs/adapter-tests": "^5.0.0",
     "@feathersjs/schema": "^5.0.0",
