--- a/package.json
+++ b/package.json
@@ -20,12 +20,12 @@
     "@babel/core": "^7.21.0",
     "@babel/preset-env": "^7.20.2",
     "@babel/register": "^7.21.0",
-    "@feathersjs/koa": "^5.0.0",
     "@feathersjs/adapter-tests": "^5.0.0",
+    "@feathersjs/koa": "^5.0.0",
+    "@koa/multer": "^3.0.2",
     "@release-it/conventional-changelog": "^5.1.1",
     "cors": "^2.8.5",
     "eslint": "^8.34.0",
-    "koa-multer": "^1.0.2",
     "mocha": "^10.2.0",
     "multer": "^1.4.5-lts.1",
     "nock": "^13.3.0",
