--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -1,73 +1,80 @@
-name: Merge Pull Request & Publish
-
-on:
+on: 
   push:
-    banches:
-      - "fml"
-  # pull_request:
-  #   types: [ closed ]
-  #   branches:
-  #     - main
-  #     - alpha
-  #     - beta
-
+    branches:
+      - main
+      - dev
+      - feature/*
 jobs:
-  test: 
-    name: 'Node.js v${{ matrix.node }}'
-    runs-on: ubuntu-latest
-    if: github.event.pull_request.merged == true || ${{ github.ref == 'ref/head/main' }} || github.event_name == 'workflow_dispatch'
-    strategy:
-      matrix:
-        node:
-          - 14
-          - 16
-          - 18
-    steps:
-      - uses: actions/setup-node@v2
-        with:
-          node-version: '${{ matrix.node }}'
-      - uses: actions/checkout@v2
-      - name: 'Cache node_modules'
-        uses: actions/cache@v2
-        with:
-          path: ~/.npm
-          key: ${{ runner.os }}-node-v${{ matrix.node }}-${{ hashFiles('**/package.json') }}
-          restore-keys: |
-            ${{ runner.os }}-node-v${{ matrix.node }}-
-      - name: Install dependencies
-        run: npm ci
-      - name: Run linters
-        run: npm run lint
-      - name: Run tests
-        run: npm run coverage
-  release:
-    name: Release
-    if: (github.event.pull_request.merged || github.event_name == 'workflow_dispatch') &&  github.ref_name == 'main'
+  my-job:
+    name: My Job
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v2
-        with:
-          node-version: 18
-      - run: npm ci
-      - run: npm config set //registry.npmjs.org/:_authToken $NPM_TOKEN
-      - run: npx release-it --dry-run --ci --npm.skipChecks
+      - name: Print a greeting
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
-  prerelease:
-    needs: test
-    name: PreRelease
-    if: (github.event.pull_request.merged || github.event_name == 'workflow_dispatch') &&  github.ref_name != 'main'
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v2
-        with:
-          node-version: 18
-      - run: npm ci
-      - run: npm run build --if-present
-      - run: npx release-it --dry-run --ci --preRelease=${{github.ref_name}} --npm.skipChecks
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+          MY_VAR: Hi there! My name is
+          FIRST_NAME: Mona
+          MIDDLE_NAME: The
+          LAST_NAME: Octocat
+        run: |
+          echo $MY_VAR $FIRST_NAME $MIDDLE_NAME $LAST_NAME.
+      -  run: echo ${GITHUB_REF}
+
+  # test_this: 
+  #   name: 'Node.js v${{ matrix.node }}'
+  #   runs-on: ubuntu-latest
+  #   # if: github.event.pull_request.merged == true || ${{ github.ref == 'ref/head/main' }} || github.event_name == 'workflow_dispatch'
+  #   # strategy:
+  #   #   matrix:
+  #   #     node:
+  #   #       - 14
+  #   #       - 16
+  #   #       - 18
+  #   steps:
+  #     # - uses: actions/setup-node@v2
+  #     #   with:
+  #     #     node-version: '${{ matrix.node }}'
+  #     # - uses: actions/checkout@v2
+  #     # - name: 'Cache node_modules'
+  #     #   uses: actions/cache@v2
+  #     #   with:
+  #     #     path: ~/.npm
+  #     #     key: ${{ runner.os }}-node-v${{ matrix.node }}-${{ hashFiles('**/package.json') }}
+  #     #     restore-keys: |
+  #     #       ${{ runner.os }}-node-v${{ matrix.node }}-
+  #     - name: Install dependencies
+  #       run: npm ci
+  #     - name: Run linters
+  #       run: npm run lint
+  #     - name: Run tests
+  #       run: npm run coverage
+  # release:
+  #   name: Release
+  #   if: (github.event.pull_request.merged || github.event_name == 'workflow_dispatch') &&  github.ref_name == 'main'
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - uses: actions/checkout@v2
+  #     - uses: actions/setup-node@v2
+  #       with:
+  #         node-version: 18
+  #     - run: npm ci
+  #     - run: npm config set //registry.npmjs.org/:_authToken $NPM_TOKEN
+  #     - run: npx release-it --dry-run --ci --npm.skipChecks
+  #       env:
+  #         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  #         NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+  # prerelease:
+  #   # needs: test
+  #   name: PreRelease
+  #   if: (github.event.pull_request.merged || github.event_name == 'workflow_dispatch') &&  github.ref_name != 'main'
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - uses: actions/checkout@v2
+  #     - uses: actions/setup-node@v2
+  #       with:
+  #         node-version: 18
+  #     - run: npm ci
+  #     - run: npm run build --if-present
+  #     - run: npx release-it --dry-run --ci --preRelease=${{github.ref_name}} --npm.skipChecks
+  #       env:
+  #         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  #         NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
