--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -6,21 +6,13 @@ on:
       - main
       - alpha
       - beta
+  pull_request:
+    types: [ closed ]
+    branches:
+      - main
+      - alpha
+      - beta
 jobs:
-#   my-job:
-#     name: My Job
-#     runs-on: ubuntu-latest
-#     steps:
-#       - name: Print a greeting
-#         env:
-#           MY_VAR: Hi there! My name is
-#           FIRST_NAME: Mona
-#           MIDDLE_NAME: The
-#           LAST_NAME: Octocat
-#         run: |
-#           echo $MY_VAR $FIRST_NAME $MIDDLE_NAME $LAST_NAME.
-#       -  run: echo ${GITHUB_REF}
-
   test: 
     name: 'Node.js v${{ matrix.node }}'
     runs-on: ubuntu-latest
