--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -3,15 +3,16 @@ name: Lint & Test
 on:
   workflow_dispatch: # allows manual trigger
   push: 
-    branches-ignore:
-      - main
-      - beta
-      - alpha
-  pull_request:
-    branches-ignore:
-      - main
-      - beta
-      - alpha
+    # branches-ignore:
+    #   - main
+    #   - beta
+    #   - alpha
+  # pull_request:
+  #   branches-ignore:
+  #     - main
+  #     - beta
+  #     - alpha
+
 jobs:
   test: 
     name: 'Node.js v${{ matrix.node }}'
