--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -16,7 +16,7 @@ jobs:
   test: 
     name: 'Node.js v${{ matrix.node }}'
     runs-on: ubuntu-latest
-    if: github.event.pull_request.merged == true || ${{ github.ref == 'ref/head/main' }} || github.event_name == 'workflow_dispatch'
+    # if: github.event.pull_request.merged == true || ${{ github.ref == 'ref/head/main' }} || github.event_name == 'workflow_dispatch'
     strategy:
       matrix:
         node:
@@ -44,7 +44,7 @@ jobs:
   release:
     name: Release
     needs: test
-    if: (github.event.pull_request.merged || github.event_name == 'workflow_dispatch') &&  github.ref_name == 'main'
+    if: github.ref_name == 'main'
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -60,7 +60,7 @@ jobs:
   prerelease:
     needs: test
     name: PreRelease
-    if: (github.event.pull_request.merged || github.event_name == 'workflow_dispatch') &&  github.ref_name != 'main'
+    if: github.ref_name != 'main'
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
