--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -1,59 +1,75 @@
+name: Publish
 
-# This workflow will run tests using node and then publish a package to GitHub Packages when a release is created
-# For more information see: https://help.github.com/actions/language-and-framework-guides/publishing-nodejs-packages
-
-name: Merge Pull Request & Publish
-
-on:
-  workflow_dispatch: # allows manual trigger
-  push:
-    banches:
-      - main
-      - develop
-      - alpha
-      - beta
-  pull_request:
-    types: [ closed ]
+on: 
+  push: 
     branches:
       - main
-      - alpha
       - beta
-      - 'releases/**-alpha*' # allow alpha releases
-      - 'releases/**-beta*' # allow beta releases
-  
-
+      - alpha
+  # pull_request:
+  #   types: [ closed ]
+  #   branches:
+  #     - main
+  #     - alpha
+  #     - beta
 jobs:
-  test:
+  test: 
+    name: 'Node.js v${{ matrix.node }}'
     runs-on: ubuntu-latest
+    # if: github.event.pull_request.merged == true || ${{ github.ref == 'ref/head/main' }} || github.event_name == 'workflow_dispatch'
     strategy:
       matrix:
-        node: [12, 14]
+        node:
+          - 14
+          - 16
+          - 18
     steps:
-      - uses: actions/checkout@v2
-      - name: Build the stack
-        run: docker-compose up -d
       - uses: actions/setup-node@v2
         with:
-          node-version: ${{ matrix.node }}
+          node-version: '${{ matrix.node }}'
+      - uses: actions/checkout@v2
+      - name: 'Cache node_modules'
+        uses: actions/cache@v2
+        with:
+          path: ~/.npm
+          key: ${{ runner.os }}-node-v${{ matrix.node }}-${{ hashFiles('**/package.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-v${{ matrix.node }}-
       - name: Install dependencies
         run: npm ci
       - name: Run linters
         run: npm run lint
       - name: Run tests
-        run: npm test
-
+        run: npm run coverage
   release:
-    needs: test
     name: Release
-    if: github.event.pull_request.merged || github.event_name == 'workflow_dispatch'
+    needs: test
+    if: github.ref_name == 'main'
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
         with:
-          node-version: 14
+          node-version: 18
       - run: npm ci
-      - run: npx semantic-release
+      - run: npm config set //registry.npmjs.org/:_authToken $NPM_TOKEN
+      - run: npx release-it --dry-run --ci --npm.skipChecks
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+  prerelease:
+    needs: test
+    name: PreRelease
+    if: github.ref_name != 'main'
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-node@v2
+        with:
+          node-version: 18
+      - run: npm ci
+      - run: npm run build --if-present
+      - run: npx release-it --dry-run --ci --preRelease=${{github.ref_name}} --npm.skipChecks
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
