--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -1,25 +1,43 @@
-name: Node Lint & Test
+name: Lint & Test
 
 on:
   workflow_dispatch: # allows manual trigger
-  pull_request:
-  
+  push: 
+    branches-ignore:
+      - main
+      - beta
+      - alpha
+  # pull_request:
+  #   branches-ignore:
+  #     - main
+  #     - beta
+  #     - alpha
+
 jobs:
-  build:
+  test: 
+    name: 'Node.js v${{ matrix.node }}'
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node: [12, 14]
+        node:
+          - 14
+          - 16
+          - 18
     steps:
-      - uses: actions/checkout@v2
-      - name: Build the stack
-        run: docker-compose up -d
       - uses: actions/setup-node@v2
         with:
-          node-version: ${{ matrix.node }}
+          node-version: '${{ matrix.node }}'
+      - uses: actions/checkout@v2
+      - name: 'Cache node_modules'
+        uses: actions/cache@v2
+        with:
+          path: ~/.npm
+          key: ${{ runner.os }}-node-v${{ matrix.node }}-${{ hashFiles('**/package.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-v${{ matrix.node }}-
       - name: Install dependencies
         run: npm ci
       - name: Run linters
         run: npm run lint
       - name: Run tests
-        run: npm test
+        run: npm run coverage
