--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "feathers-openai",
-  "version": "0.0.0-semantic-release",
+  "version": "0.0.0-release-it",
   "description": "An open.ai adapter for FeathersJS",
   "main": "src/",
   "types": "lib/",
@@ -8,35 +8,30 @@
     "lib": "lib",
     "test": "test"
   },
-  "peerDependencies": {
-    "@feathersjs/errors": "^5.0.0 || ^4.5.12",
+  "dependencies": {
+    "@feathersjs/errors": "^5.0.0",
+    "@feathersjs/feathers": "^5.0.0",
+    "@feathersjs/schema": "^5.0.0",
+    "@feathersjs/typebox": "^5.0.0",
     "openai": "^3.1.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.21.0",
     "@babel/core": "^7.21.0",
-    "@babel/plugin-transform-modules-commonjs": "^7.21.2",
     "@babel/preset-env": "^7.20.2",
     "@babel/register": "^7.21.0",
-    "@feathersjs/errors": "^5.0.0",
+    "@feathersjs/adapter-tests": "^5.0.0",
     "@feathersjs/koa": "^5.0.0",
-    "@semantic-release/commit-analyzer": "^9.0.2",
-    "@semantic-release/git": "^10.0.1",
-    "@semantic-release/npm": "^9.0.1",
-    "app-root-path": "^3.1.0",
+    "@koa/multer": "^3.0.2",
+    "@release-it/conventional-changelog": "^5.1.1",
     "cors": "^2.8.5",
     "eslint": "^8.34.0",
-    "f4": "npm:@feathersjs/feathers@^4.0.0",
-    "f4_exp": "npm:@feathersjs/express@^4.0.0",
-    "f5": "npm:@feathersjs/feathers@^5.0.0",
-    "f5_exp": "npm:@feathersjs/express@^5.0.0",
-    "koa-multer": "^1.0.2",
     "mocha": "^10.2.0",
+    "multer": "^1.4.5-lts.1",
     "nock": "^13.3.0",
     "nyc": "^15.1.0",
-    "semantic-release": "^20.1.0",
-    "semistandard": "^16.0.1",
-    "supertest": "^6.3.3"
+    "release-it": "^15.7.0",
+    "semistandard": "^16.0.1"
   },
   "engines": {
     "node": ">= 16"
@@ -44,11 +39,11 @@
   "scripts": {
     "lint": "semistandard --fix",
     "mocha": "mocha --require @babel/register --recursive test/**/*.test.js",
-    "testd": "docker-compose up -d && npm run test && docker-compose down",
     "test": "printf '\\33c\\e[3J' && npm run lint && npm run coverage",
     "build": "babel src -d lib",
     "test:dev": "printf '\\33c\\e[3J' && npm run lint && npm run mocha -- --watch --esm --parallel --watch-files ./test/**/*,./lib/**",
-    "coverage": "nyc npm run mocha"
+    "coverage": "nyc npm run mocha",
+    "release": "release-it --dry-run --ci --config .release-it.js"
   },
   "semistandard": {
     "env": [
@@ -62,11 +57,11 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/jamesvillarrubia/feathers-rpc.git"
+    "url": "git+https://github.com/jamesvillarrubia/feathers-openai.git"
   },
   "keywords": [
     "feathers",
-    "rpc",
+    "openai",
     "nlp",
     "feathers-plugin"
   ],
@@ -74,74 +69,10 @@
     "name": "James Villarrubia",
     "email": "james.villarrubia@gmail.com"
   },
-  "contributors": [
-    {
-      "name": "James Villarrubia",
-      "email": "james.villarrubia@gmail.com"
-    },
-    {
-      "name": "Ben Zelinski",
-      "email": "bziggz@gmail.com"
-    }
-  ],
+  "contributors": [],
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/jamesvillarrubia/feathers-rpc/issues"
+    "url": "https://github.com/jamesvillarrubia/feathers-openai/issues"
   },
-  "homepage": "https://github.com/jamesvillarrubia/feathers-rpc#readme",
-  "release": {
-    "branches": [
-      {
-        "name": "main"
-      },
-      {
-        "name": "alpha",
-        "channel": "alpha",
-        "prerelease": true
-      },
-      {
-        "name": "beta",
-        "channel": "beta",
-        "prerelease": true
-      }
-    ],
-    "plugins": [
-      "@semantic-release/git",
-      [
-        "@semantic-release/npm",
-        {
-          "npmPublish": true
-        }
-      ],
-      [
-        "@semantic-release/commit-analyzer",
-        {
-          "preset": "angular",
-          "releaseRules": [
-            {
-              "type": "refactor",
-              "release": "patch"
-            },
-            {
-              "type": "style",
-              "release": "patch"
-            },
-            {
-              "type": "perf",
-              "release": "patch"
-            },
-            {
-              "type": "chore",
-              "release": "patch"
-            }
-          ]
-        }
-      ]
-    ]
-  },
-  "dependencies": {
-    "@feathersjs/adapter-tests": "^5.0.0",
-    "@feathersjs/schema": "^5.0.0",
-    "@feathersjs/typebox": "^5.0.0"
-  }
+  "homepage": "https://github.com/jamesvillarrubia/feathers-openai#readme"
 }
