ci: enables publication attempt #3

--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -47,6 +47,7 @@ jobs:
         with:
           node-version: 18
       - run: npm ci
+      - run: npm run build --if-present
       - run: npx release-it --ci --npm.skipChecks
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
