--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "feathers-openai",
-  "version": "0.0.4-alpha.0",
+  "version": "0.0.0-releaseit",
   "description": "An open.ai adapter for FeathersJS",
-  "main": "src/",
+  "main": "lib/",
   "types": "lib/",
   "directories": {
     "lib": "lib",
