--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -8,37 +8,37 @@ on:
       - alpha
 
 jobs:
-  test: 
-    name: 'Node.js v${{ matrix.node }}'
-    runs-on: ubuntu-latest
-    # if: github.event.pull_request.merged == true || ${{ github.ref == 'ref/head/main' }} || github.event_name == 'workflow_dispatch'
-    strategy:
-      matrix:
-        node:
-          - 14
-          - 16
-          - 18
-    steps:
-      - uses: actions/setup-node@v2
-        with:
-          node-version: '${{ matrix.node }}'
-      - uses: actions/checkout@v2
-      - name: 'Cache node_modules'
-        uses: actions/cache@v2
-        with:
-          path: ~/.npm
-          key: ${{ runner.os }}-node-v${{ matrix.node }}-${{ hashFiles('**/package.json') }}
-          restore-keys: |
-            ${{ runner.os }}-node-v${{ matrix.node }}-
-      - name: Install dependencies
-        run: npm ci
-      - name: Run linters
-        run: npm run lint
-      - name: Run tests
-        run: npm run coverage
+  # test: 
+  #   name: 'Node.js v${{ matrix.node }}'
+  #   runs-on: ubuntu-latest
+  #   # if: github.event.pull_request.merged == true || ${{ github.ref == 'ref/head/main' }} || github.event_name == 'workflow_dispatch'
+  #   strategy:
+  #     matrix:
+  #       node:
+  #         - 14
+  #         - 16
+  #         - 18
+  #   steps:
+  #     - uses: actions/setup-node@v2
+  #       with:
+  #         node-version: '${{ matrix.node }}'
+  #     - uses: actions/checkout@v2
+  #     - name: 'Cache node_modules'
+  #       uses: actions/cache@v2
+  #       with:
+  #         path: ~/.npm
+  #         key: ${{ runner.os }}-node-v${{ matrix.node }}-${{ hashFiles('**/package.json') }}
+  #         restore-keys: |
+  #           ${{ runner.os }}-node-v${{ matrix.node }}-
+  #     - name: Install dependencies
+  #       run: npm ci
+  #     - name: Run linters
+  #       run: npm run lint
+  #     - name: Run tests
+  #       run: npm run coverage
   release:
     name: Release
-    needs: test
+    # needs: test
     if: github.ref_name == 'main'
     runs-on: ubuntu-latest
     steps:
@@ -48,12 +48,12 @@ jobs:
           node-version: 18
       - run: npm ci
       - run: npm run build --if-present
-      - run: npx release-it --ci --npm.skipChecks
+      - run: npx release-it --dry-run --ci --npm.skipChecks
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
   prerelease:
-    needs: test
+    # needs: test
     name: PreRelease
     if: github.ref_name != 'main'
     runs-on: ubuntu-latest
