--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -45,6 +45,9 @@ jobs:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0
+        run: |
+          git config user.name github-actions
+          git config user.email github-actions@github.com
       - uses: actions/setup-node@v3
         with:
           node-version: 18
@@ -63,6 +66,9 @@ jobs:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0
+        run: |
+          git config user.name github-actions
+          git config user.email github-actions@github.com
       - uses: actions/setup-node@v3
         with:
           node-version: 18
