--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -8,37 +8,36 @@ on:
       - alpha
 
 jobs:
-  # test: 
-  #   name: 'Node.js v${{ matrix.node }}'
-  #   runs-on: ubuntu-latest
-  #   # if: github.event.pull_request.merged == true || ${{ github.ref == 'ref/head/main' }} || github.event_name == 'workflow_dispatch'
-  #   strategy:
-  #     matrix:
-  #       node:
-  #         - 14
-  #         - 16
-  #         - 18
-  #   steps:
-  #     - uses: actions/setup-node@v2
-  #       with:
-  #         node-version: '${{ matrix.node }}'
-  #     - uses: actions/checkout@v2
-  #     - name: 'Cache node_modules'
-  #       uses: actions/cache@v2
-  #       with:
-  #         path: ~/.npm
-  #         key: ${{ runner.os }}-node-v${{ matrix.node }}-${{ hashFiles('**/package.json') }}
-  #         restore-keys: |
-  #           ${{ runner.os }}-node-v${{ matrix.node }}-
-  #     - name: Install dependencies
-  #       run: npm ci
-  #     - name: Run linters
-  #       run: npm run lint
-  #     - name: Run tests
-  #       run: npm run coverage
+  test: 
+    name: 'Node.js v${{ matrix.node }}'
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        node:
+          - 14
+          - 16
+          - 18
+    steps:
+      - uses: actions/setup-node@v3
+        with:
+          node-version: '${{ matrix.node }}'
+      - uses: actions/checkout@v3
+      - name: 'Cache node_modules'
+        uses: actions/cache@v3
+        with:
+          path: ~/.npm
+          key: ${{ runner.os }}-node-v${{ matrix.node }}-${{ hashFiles('**/package.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-v${{ matrix.node }}-
+      - name: Install dependencies
+        run: npm ci
+      - name: Run linters
+        run: npm run lint
+      - name: Run tests
+        run: npm run coverage
   release:
     name: Release
-    # needs: test
+    needs: test
     if: github.ref_name == 'main'
     runs-on: ubuntu-latest
     steps:
@@ -58,7 +57,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
   prerelease:
-    # needs: test
+    needs: test
     name: PreRelease
     if: github.ref_name != 'main'
     runs-on: ubuntu-latest
