ci: adds types to test workflow PR option

--- a/.github/workflows/line_and_test.yml
+++ b/.github/workflows/line_and_test.yml
@@ -8,6 +8,7 @@ on:
       - beta
       - alpha
   pull_request:
+    types: [opened,reopened,synchronize]
     branches-ignore:
       - main
       - beta
